# KineticAI

./: .coverage  .envrc  .gitignore  README.md  flake.nix  mypy.ini  pyproject.toml  pytest.ini  setup.py
database/: schema.sql
dev-scripts/: data-ingestion.sh  data-retrieval.sh  external-data-gateway.sh
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.routes.ts
frontend/src/app/features/activities/: activities.routes.ts  activities.service.ts
frontend/src/app/features/activities/activities-list/: activities-list.component.ts
frontend/src/app/features/activities/activity-detail/: activity-detail.component.ts
frontend/src/app/features/settings/: settings.component.ts  settings.routes.ts  settings.service.ts
frontend/src/app/models/: activity.model.ts
models/race_predictor_nih/: README.md  nn.ipynb  pyproject.toml  xgboost.ipynb
models/weather-impact/: data-preprocessing.ipynb  data-preprocessing.py  pyproject.toml  weather-impact.py
services/data_ingestion/: .coverage  .env.development  docker-compose.yml  pyproject.toml
services/data_ingestion/src/: main.py  models.py
services/data_ingestion/src/data_ingestion/: __init__.py  config.py  main.py  models.py
services/data_ingestion/src/data_ingestion/db/: __init__.py  activities.py  database.py  gear.py  models.py
services/data_ingestion/tests/: __init__.py  conftest.py  test_activities.py  test_database.py  test_main.py
services/data_retrieval/: .env.development  docker-compose.yml  pyproject.toml
services/data_retrieval/dev-scripts/: data-retrieval.sh
services/data_retrieval/src/data_retrieval/: config.py  main.py
services/data_retrieval/src/data_retrieval/db/: activities.py  database.py  gear.py
services/data_retrieval/tests/: conftest.py  test_activities.py  test_main.py
services/external_data_gateway/: docker-compose.yml
services/external_data_gateway/src/: config.py  main.py  metrics.py  models.py  rate_limiter.py  secrets.py  sync.py
services/external_data_gateway/tests/: test_sync.py
services/kinetic-common/: pyproject.toml
services/kinetic-common/src/kinetic_common/: __init__.py
services/kinetic-common/src/kinetic_common/models/: __init__.py  pydantic.py  sqlalchemy.py
services/performance_modeling/: pyproject.toml
services/performance_modeling/src/performance_modeling/: config.py  cp_estimator.py  main.py  models.py  race_prediction.py
services/performance_modeling/src/performance_modeling/db/: database.py  power_curve.py
services/race_prediction/: models.py  pyproject.toml
services/race_prediction/src/race_prediction/: main.py
services/race_prediction/src/race_prediction/db/: races.py
