[project]
name = "endurance-platform"
version = "0.1.0"
description = "Data processing platform for endurance athletes"
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "N",   # pep8-naming
    "UP",  # pyupgrade
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = "-ra -q --cov"
testpaths = ["tests"]
python_files = "test_*.py"