[tool.poetry]
name = "kinetic-ai-platform"
version = "0.1.0"
description = "Python-Based Endurance Platform"
authors = ["Aiden Gindin <aiden@aidengindin.com>"]
# packages = [
#     { include = "services/*/src" },
# ]

[tool.poetry.dependencies]
python = "3.11.10"

# Shared dependencies across services
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
pydantic-settings = "^2.1.0"
redis = "^5.0.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
requests = "^2.31.0"
aiohttp = "^3.11.7"
backoff = "^2.2.0"
hvac = "^2.1.0"
prometheus-client = "^0.21.0"
celery = "^5.3.0"
types-redis = "^4.6.0.20241004"
scikit-learn = "1.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.12.0"
black = "^24.10.0"
isort = "^5.13.0"
mypy = "^1.8.0"
flake8 = "^7.0.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Optional but recommended tool configurations
[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["services"]
python_files = ["test_*.py"]
addopts = "-v --cov=services"
