[tool.poetry]
name = "kinetic-ai-race-predicitor-nih"
version = "0.1.0"
description = "Python-Based Endurance Platform"
authors = ["Aiden Gindin <aiden@aidengindin.com>"]
packages = [
    { include = "race_prediction_nih", from = "src" }
]

[tool.poetry.dependencies]
python = "3.11.10"
pandas = "^2.2.3"
numpy = "^2.2.0"
scikit-learn = "^1.5.2"
xgboost = "^2.1.3"
matplotlib = "^3.10.0"
