[tool.poetry]
name = "kinetic-ai-data-ingestion"
version = "0.1.0"
description = "Python-Based Endurance Platform"
authors = ["Aiden Gindin <aiden@aidengindin.com>"]
packages = [
    { include = "data_ingestion", from = "src" }
]

[tool.poetry.dependencies]
python = "3.11.10"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
fitparse = "^1.2.0"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
pydantic-settings = "^2.1.0"
redis = "^5.0.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
requests = "^2.31.0"
aiohttp = "^3.11.7"
backoff = "^2.2.0"
hvac = "^2.1.0"
prometheus-client = "^0.21.0"
celery = "^5.3.0"
types-redis = "^4.6.0.20241004"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
