[tool.poetry]
name = "kinetic-ai-data-retrieval"
version = "0.1.0"
description = "Data retrieval service for KineticAI"
authors = ["Aiden Gindin <aiden@aidengindin.com>"]
packages = [
    { include = "data_retrieval", from = "src" }
]

[tool.poetry.dependencies]
python = "3.11.10"
sqlalchemy = "^2.0.0"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.0"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
pydantic-settings = "^2.1.0"
prometheus-client = "^0.21.0"
kinetic-common = {path = "../kinetic-common", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=data_retrieval"
asyncio_mode = "auto"
